==> jansampol/esp32c6-MicroRos/src_backup/InputController/SPI/SPI0Manager.cpp <==
#include "InputController/SPI/SPI0Manager.h"

bool SPI0Manager::begin(){
    Serial.println("Starting SPI...");
    SPI.begin(
        SPI0_CLK_PIN,   // SCK
        SPI0_MISO_PIN,  // MISO (not used by ST7789, but required)
        SPI0_MOSI_PIN,  // MOSI
        -1
    );    

    // debugCSPins();
    // Before any SPI transfer we have to quickly turn on and off the CS pin. (At least for MCP23S17 with modified lib)
    // The function select device does this toggle action.

    deselectDevice();
    // Select Horizontal Buttons MCP and init
    selectDevice(UI_1_HBUTTONS);
    if(!_horizontalButtons.begin()){
        Serial.println("Horizontal Buttons MCP23S17 failed to initialize!");
        return false;
    }
    selectDevice(UI_1_HBUTTONS);
    _horizontalButtons.pinMode16(0xffff);
    selectDevice(UI_1_HBUTTONS);
    _horizontalButtons.setPullup16(0xffff);
    selectDevice(UI_1_HBUTTONS);
    _horizontalButtons.setPolarity16(0xffff);
    deselectDevice();


    // Serial.print("Horizontal Buttons: ");
    // Serial.println(readHorizontalButtons(), BIN);

    delay(10);

    // setup MCP for leds and switches
    selectDevice(UI_2_LEDS_AND_SWITCHES);
    if(!_ledsAndSwitches.begin()){
        Serial.println("LEDs and Switches MCP23S17 failed to initialize!");
        return false;
    }
    selectDevice(UI_2_LEDS_AND_SWITCHES);
    _ledsAndSwitches.pinMode16(0xffc0);
    selectDevice(UI_2_LEDS_AND_SWITCHES);
    _ledsAndSwitches.setPullup16(0xffc0);
    selectDevice(UI_2_LEDS_AND_SWITCHES);
    _ledsAndSwitches.setPolarity16(0xffc0);
    deselectDevice();

    delay(10);

    // setup MCP for vertical buttons
    selectDevice(UI_3_VBUTTONS);
    if(!_verticalButtons.begin()){
        Serial.println("Vertical Buttons MCP23S17 failed to initialize!");
        return false;
    }
    selectDevice(UI_3_VBUTTONS);
    _verticalButtons.pinMode16(0xffff);
    selectDevice(UI_3_VBUTTONS);
    _verticalButtons.setPullup16(0xffff);
    selectDevice(UI_3_VBUTTONS);
    _verticalButtons.setPolarity16(0xffff);
    deselectDevice();
    
    delay(10);

    // setup MCP for main valve
    selectDevice(MAINVALVE);
    if(!_mainValve.begin()){
        Serial.println("Main Valve MCP23S17 failed to initialize!");
        return false;
    }
    selectDevice(MAINVALVE);
    _mainValve.pinMode16(0x0000); // all outputs
    selectDevice(MAINVALVE);
    _mainValve.write16(0x0000); // all low
    deselectDevice();


    // setup ADC
    selectDevice(ADC_POTMETERS);
    _adcPotmeters.begin(FAKE_CS_PIN);
    deselectDevice();

    // Setup screen
    Serial.println("Initializing screen in SPI0Manager");

    // Hardware reset
    setScreenRES(false); // uses MAINVALVE = 4
    delay(1);
    setScreenRES(true); // release reset
    delay(1);
    
    // Select screen and keep it selected during all operations
    selectDevice(SCREEN);
    delay(1);
    Serial.println("Screen device selected, calling init...");
    _screen.init(240, 320);
    _screen.setSPISpeed(80000000);
    _screen.setRotation(1);
    _screen.fillScreen(0x0000); // black
    deselectDevice();
    setScreenBLK(true); // set backlight on only after filling it 
    
    Serial.println("Screen initialized by SPI0Manager.");

    // setup External MCP 1 (Change pinmodes and settings as needed.)
    // selectDevice(EXTERNAL_MCP_1);
    // if(!_externalMCP1.begin()){
    //     Serial.println("External MCP 1 failed to initialize!");
    //     return false;
    // }
    // selectDevice(EXTERNAL_MCP_1);
    // _externalMCP1.pinMode16(0xffff);
    // selectDevice(EXTERNAL_MCP_1);
    // _externalMCP1.write16(0x0000);
    // deselectDevice();
    
    delay(10);

    return true;
}

void SPI0Manager::debugCSPins(){
    // select each device, print a message, and wait for 5 seconds.
    for(int i = NO_DEVICE; i <= EXTERNAL_MCP_1; i++){
        deviceNameSPI0 device = static_cast<deviceNameSPI0>(i);
        Serial.print("Selecting device: ");
        Serial.println(i);
        SPI0Manager spiManager;
        spiManager.selectDevice(device);
        delay(5000);
    }
}

void SPI0Manager::selectDevice(deviceNameSPI0 device){
    // CS pin has to be toggles, so select no device first and then retrigger cs.
    deselectDevice();
    delayMicroseconds(2);

    switch(device){
        case NO_DEVICE:
            // select 0 in binary 0000
            // do nothing as all pins are already low
            break;
        case UI_1_HBUTTONS:
            // select 1 in binary 0001
            digitalWrite(CS_1_PIN, HIGH);
            digitalWrite(CS_2_PIN, LOW);
            digitalWrite(CS_3_PIN, LOW);
            digitalWrite(CS_4_PIN, LOW);
            break;
        case UI_2_LEDS_AND_SWITCHES:
            // select 2 in binary 0010
            digitalWrite(CS_1_PIN, LOW);    
            digitalWrite(CS_2_PIN, HIGH);
            digitalWrite(CS_3_PIN, LOW);
            digitalWrite(CS_4_PIN, LOW);
            break;
        case UI_3_VBUTTONS:
            // select 3 in binary 0011
            digitalWrite(CS_1_PIN, HIGH);
            digitalWrite(CS_2_PIN, HIGH);
            digitalWrite(CS_3_PIN, LOW);
            digitalWrite(CS_4_PIN, LOW);
            break;
        case MAINVALVE:
            // select 4 in binary 0100
            digitalWrite(CS_1_PIN, LOW);
            digitalWrite(CS_2_PIN, LOW);
            digitalWrite(CS_3_PIN, HIGH);
            digitalWrite(CS_4_PIN, LOW);
            break;
        case ADC_POTMETERS:
            // select 5 in binary 0101
            digitalWrite(CS_1_PIN, HIGH);
            digitalWrite(CS_2_PIN, LOW);
            digitalWrite(CS_3_PIN, HIGH);
            digitalWrite(CS_4_PIN, LOW);
            break;
        case SCREEN:
            // select 6 in binary 0110
            digitalWrite(CS_1_PIN, LOW);
            digitalWrite(CS_2_PIN, HIGH);
            digitalWrite(CS_3_PIN, HIGH);
            digitalWrite(CS_4_PIN, LOW);
            break;
        // To add external devices, add to enum in .h file and make another case here with correct binary mapping.
        case EXTERNAL_MCP_1:
            // select 7 in binary 0111
            digitalWrite(CS_1_PIN, HIGH);
            digitalWrite(CS_2_PIN, HIGH);
            digitalWrite(CS_3_PIN, HIGH);
            digitalWrite(CS_4_PIN, LOW);
            break;
        default:
            // deselect all
            digitalWrite(CS_1_PIN, LOW);
            digitalWrite(CS_2_PIN, LOW);
            digitalWrite(CS_3_PIN, LOW);
            digitalWrite(CS_4_PIN, LOW);
            break;
    }
}

void SPI0Manager::deselectDevice(){
    // 'select' NO_DEVICE > where all 4 bits are low
    digitalWrite(CS_1_PIN, LOW);
    digitalWrite(CS_2_PIN, LOW);
    digitalWrite(CS_3_PIN, LOW);
    digitalWrite(CS_4_PIN, LOW);
}

uint16_t SPI0Manager::readPotmeters(bool id){
    // Read MCP3004. Uses 10-bit, so value 0..1023 (for 0..3.3V)

    selectDevice(ADC_POTMETERS);
    delayMicroseconds(10);
    uint16_t value = 1023 - _adcPotmeters.analogRead(id);  // accidentally inverted; in next version this will be corrected
    deselectDevice();
    return value;
}
